# spamdyke

documentation/: Changelog.txt  FAQ.html  INSTALL.txt  README.html  README_ip_file_format.html  README_rdns_directory_format.html  README_rdns_file_format.html  UPGRADING.txt  policy.php.example  spamdyke.conf.example
documentation/development_notes/: TODO.txt  parsing_addresses.txt
spamdyke/: Makefile.in  base64.c  base64.h  config.h.in  config_test.c  config_test.h  configuration.c  configuration.h  configure  configure.ac  dns.c  dns.h  environment.c  environment.h  exec.c  exec.h  filter.c  filter.h  log.c  log.h  md5.c  md5.h  search_fs.c  search_fs.h  spamdyke.c  spamdyke.h  tls.c  tls.h  usage.c  usage.h
tests/: README.txt  run
tests/addsecs/: Makefile  addsecs.c
tests/certificates/: HOWTO.txt
tests/cputime/: Makefile  cputime.c
tests/dnsdummy/: Makefile  dnsdummy.c
tests/exitvalue/: Makefile  exitvalue.c
tests/sendrecv/: Makefile  sendrecv.c
tests/smtpauth/: Makefile  smtpauth_crammd5.c  smtpauth_login.c  smtpauth_plain.c
tests/smtpdummy/: Makefile  smtpdummy.c
tests/test-auth_001-login_success/: run.sh
tests/test-auth_002-login_failure/: run.sh
tests/test-auth_003-plain_success/: run.sh
tests/test-auth_005-vpopmail_crammd5_success/: run.sh
tests/test-auth_006-vpopmail_crammd5_failure/: input.txt  run.sh
tests/test-auth_007-vpopmail_crammd5_hostname/: input.txt  run.sh
tests/test-auth_008-unknown_protocol/: input.txt  run.sh
tests/test-auth_009-unquoted_command/: run.sh
tests/test-auth_010-tls_login_success/: input.txt  run.sh
tests/test-auth_011-tls_login_failure/: input.txt  run.sh
tests/test-auth_012-plain_inline_success/: input.txt
tests/test-auth_013-plain_inline_failure/: input.txt  run.sh
tests/test-auth_014-login_inline_success/: input.txt  run.sh
tests/test-auth_015-login_inline_failure/: input.txt  run.sh
tests/test-auth_016-double_auth_bypass_no_rdns/: input.txt  run.sh
tests/test-auth_017-login_inline_multiple_spaces/: input.txt  run.sh
tests/test-auth_018-plain_inline_multiple_spaces/: input.txt  run.sh
tests/test-auth_019-unpatched_vpopmail_crammd5_multiple_spaces/: input.txt  run.sh
tests/test-auth_020-vpopmail_crammd5_hostname_file/: run.sh
tests/test-auth_021-vpopmail_crammd5_hostname_command/: run.sh
tests/test-auth_022-unpatched_qmail_login_malformed_input/: run.sh
tests/test-auth_023-unpatched_qmail_plain_malformed_input/: run.sh
tests/test-auth_024-unpatched_vpopmail_qmail_crammd5_malformed_input/: input.txt  run.sh
tests/test-auth_025-patched_login_passthrough/: run.sh
tests/test-auth_026-patched_plain_passthrough/: run.sh
tests/test-auth_027-patched_crammd5_passthrough/: run.sh
tests/test-auth_028-patched_always_hides_encryption/: run.sh
utils/: Makefile.in  README.txt  config.h.in  configure  configure.ac  dnsa.c  dnsany.c  dnsany_libc.c  dnscname.c  dnsmx.c  dnsns.c  dnsptr.c  dnssoa.c  dnstxt.c  domain2path.c  domainsplit.c  timefilter.c
(+977 files in other folders)
